src/styles/components/footer.scss
@use "../utils/box";
@use "../utils/text";
@use "../utils/theme";

footer {
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  position: absolute;
  @include text.size("xs");
  justify-content: space-between;
  @include box.padding(0.1, 0.5);

  .wrapper {
    display: flex;
    align-items: center;
  }

  .lang {
    text-transform: uppercase;
  }
}

@include theme.apply("footer") using ($mode) {
  box-shadow: theme.shadow($mode, "top");
  background-color: theme.color("surface", $mode);
}

